# c2rust_corpus

coreutils/: README.md  create_c_and_rust_versions.py  create_c_and_rust_versions.sh  extract_deps.sh  index.md
coreutils/cat/rust/: lib.rs
coreutils/cut/rust/: Cargo.toml
coreutils/date/c/: compile_commands.json  date
coreutils/date/rust/: lib.rs
coreutils/dirname/c/: Makefile  compile_commands.json
coreutils/dirname/rust/: lib.rs
coreutils/echo/c/: compile_commands.json
coreutils/echo/rust/: Cargo.toml  lib.rs
coreutils/false/c/: compile_commands.json
coreutils/false/rust/: Cargo.toml  lib.rs
coreutils/head/rust/: lib.rs
coreutils/join/c/: Makefile
coreutils/join/rust/: Cargo.toml
coreutils/kill/c/: Makefile
coreutils/kill/rust/: lib.rs
coreutils/paste/c/: Makefile  compile_commands.json
coreutils/paste/rust/: lib.rs
coreutils/printf/c/: printf
coreutils/printf/rust/: lib.rs
coreutils/rmdir/c/: Makefile  rmdir
coreutils/rmdir/rust/: Cargo.toml
coreutils/sleep/c/: compile_commands.json
coreutils/sleep/rust/: lib.rs
coreutils/sort/c/: Makefile  sort
coreutils/sort/rust/: lib.rs
coreutils/split/rust/: lib.rs
coreutils/src/sort/rust/: Cargo.toml
coreutils/src/sort/rust/src/: fopen_safer.rs  nproc.rs  obstack.rs  physmem.rs  pipe2.rs  sort.rs  xstrtol_error.rs  xstrtoumax.rs
coreutils/tail/rust/: lib.rs
coreutils/tests/cat/: cat-E.sh  (+3 more)
coreutils/wc/rust/: Cargo.toml  lib.rs
coreutils/wc/rust/src/: argv_iter.rs  btowc.rs  readtokens0.rs  xbinary_io.rs
lighttpd/: create_c_and_rust_versions.py  download_lighttpd.sh
(+345 files in other folders)
