[workspace]
members = [
]
[package]
name = "rust"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "rust"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/wc.rs"
name = "wc"
[dependencies]
c2rust-bitfields= "0.3"
libc= "0.2"
f128= "0.2.9"
